@@ -7,6 +7,9 @@ Version 1.4
 -----------
 (in development)
 
+- With the ``noclasses`` option in the HTML formatter, some styles
+  present in the stylesheet were not added as inline styles.
+
 - Three fixes to the Lua lexer (#480, #481, #482).
 
 
